fixed horizontal scroll on mobile and tablet versions of form page

--- a/source/sass/blocks/intro-secondary.scss
+++ b/source/sass/blocks/intro-secondary.scss
@@ -37,7 +37,7 @@
 
 .intro-secondary__header--form {
   @media (min-width: $tablet-width) {
-    padding-top: 67px;
+    padding-top: 64px;
   }
 
   @media (min-width: $desktop-width) {
@@ -61,7 +61,7 @@
 
 .intro-secondary__title--form {
   @media (min-width: $tablet-width) {
-    margin-bottom: 18px;
+    margin-bottom: 21px;
   }
 
   @media (min-width: $desktop-width) {
